# computation-experiments

./: .gitignore  README.md
src/length-delimited-codec/: Cargo.toml
src/length-delimited-codec/benches/: pipeline.rs
src/length-delimited-codec/src/: lib.rs  main.rs
src/parallelization-over-heterogeneous-work/: Cargo.toml
src/parallelization-over-heterogeneous-work/src/: main.rs
src/parallelization-over-nonlinear-data/: Cargo.toml
src/parallelization-over-nonlinear-data/src/: data.rs  immutable_collection.rs  immutable_reduction.rs  main.rs  mutable_collection.rs  run_utils.rs  using_immutable_reduction.rs
src/parallelization-over-nonlinear-data/src/tree_with_allocated_children/: data.rs  immutable_collection.rs  immutable_reduction.rs  mod.rs  mutable_collection.rs  using_immutable_reduction.rs
src/parallelization-over-nonlinear-data/src/tree_with_on_the_fly_children/: computation_reduce.rs  data.rs  load_status.rs  mod.rs  node.rs  node_storage.rs  parallel_computation.rs
