[package]
name = "length-delimited-codec"
version = "0.1.0"
edition = "2024"
publish = ["artifactory"]

[dependencies]
orx-concurrent-bag = { version = "3.4.0" }
orx-parallel = { git = "https://github.com/orxfun/orx-parallel/", branch = "special-termination-condition" }
orx-concurrent-recursive-iter = { git = "https://github.com/orxfun/orx-concurrent-recursive-iter", branch = "more-flexible-extension", default-features = false }
rand = "0.9.2"
rand_chacha = "0.9"
rayon = "1.11.0"
clap = { version = "4.5.50", features = ["derive"] }
orx-iterable = { version = "1.3.0" }
orx-imp-vec = { version = "2.17.0" }
